# FullstackRustDemo

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Rustfmt.toml  default.bac.nix  default.nix  wasm_default.nix
backend/auth/: Cargo.toml
backend/auth/src/: banned_set.rs  jwt.rs  lib.rs  password.rs  secret.rs  test.rs
backend/db/: Cargo.toml  diesel.toml
backend/db/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/db/migrations/2018-02-09-022533_create_users/: down.sql
backend/db/migrations/2018-02-09-022624_create_articles/: up.sql
backend/db/migrations/2018-02-14-032030_forums/: down.sql  up.sql
backend/db/migrations/2018-02-24-231648_create_buckets/: down.sql  up.sql
backend/db/src/: bucket.rs  chat.rs  lib.rs  message.rs  question.rs  schema.rs
backend/db/src/calls/: answer.rs  article.rs  auth.rs  bucket.rs  chat.rs  forum.rs  message.rs  mod.rs  post.rs  question.rs  thread.rs  user.rs
backend/db/src/conversions/: answer.rs  article.rs  bucket.rs  chat.rs  forum.rs  message.rs  mod.rs  post.rs  question.rs  thread.rs  user.rs
backend/db/src/diesel_extensions/: pagination.rs
backend/db/tests/: bench.rs  integration.rs
backend/db/tests/calls/: auth.rs  bucket.rs  forum.rs  mod.rs  user.rs
backend/db/tests/common/: mod.rs  setup.rs
backend/error/: Cargo.toml
backend/error/src/: lib.rs
backend/pool/: Cargo.toml
backend/pool/src/: lib.rs
backend/server/: Cargo.toml  Rocket.toml
backend/server/src/: lib.rs  main.rs
backend/server/src/routes/: answer.rs  article.rs  auth.rs  bucket.rs  chat.rs  forum.rs  message.rs  mod.rs  post.rs  question.rs  static_file.rs  thread.rs  user.rs
backend/server/tests/: user.rs
backend/testing_common/: Cargo.toml
backend/testing_common/src/: constants.rs  database_error.rs  lib.rs  query_helper.rs  setup.rs
backend/testing_fixtures/: Cargo.toml
backend/testing_fixtures/src/: lib.rs
backend/testing_fixtures/src/fixtures/: bucket.rs  forum.rs  mod.rs  user.rs
backend/warp_server/: Cargo.toml
backend/warp_server/src/: db_integration.rs  error.rs  jwt.rs  logging.rs  main.rs  state.rs  util.rs  uuid_integration.rs
backend/warp_server/src/routes/: answer.rs  article.rs  auth.rs  bucket.rs  chat.rs  forum.rs  message.rs  mod.rs  post.rs  question.rs  static_file.rs  thread.rs  user.rs
backend/warp_server/src/state/: banned_list.rs  db_integration.rs  jwt.rs  mod.rs
frontend/app/: Cargo.toml  Web.toml
frontend/app/src/: main.rs
frontend/app/src/components/: header_component.rs  mod.rs
frontend/app/src/components/auth/: create_account_component.rs  mod.rs
frontend/app/static/: index.html  styles.css
frontend/auth/: Cargo.toml
frontend/auth/src/: create_account_component.rs  lib.rs  login_component.rs  requests.rs
frontend/bucket/: Cargo.toml
frontend/bucket/src/: bucket.rs  bucket_management.rs  bucket_participants.rs  buckets.rs  lib.rs  new_bucket.rs  requests.rs
frontend/common/: Cargo.toml
frontend/common/src/: fetch.rs  lib.rs  notification.rs  user.rs
frontend/common/src/datatypes/: forum.rs  mod.rs  question.rs  thread.rs
frontend/context/: Cargo.toml
frontend/context/src/: jwt_service.rs  lib.rs  networking.rs  route.rs  route_service.rs  storage.rs  user.rs
frontend/context/src/datatypes/: answer.rs  bucket.rs  forum.rs  post.rs  question.rs  thread.rs  user.rs
frontend/forum/: Cargo.toml
frontend/forum/src/: forums_list.rs  lib.rs  list_elements.rs  new_forum.rs  new_thread.rs  old.rs  post_tree.rs  requests.rs  thread.rs  threads_list.rs  title.rs
frontend/frontend7/: Cargo.toml
frontend/frontend7/src/: main.rs
frontend/frontend7/src/components/: mod.rs
frontend/frontend7/src/components/auth/: login_component.rs
frontend/frontend7/src/components/bucket/: mod.rs  new_bucket.rs
frontend/frontend7/src/components/forum/: list_elements.rs  mod.rs  new_thread.rs  post_tree.rs
frontend/frontend7/static/: index.html
frontend/header/: Cargo.toml
frontend/header/src/: lib.rs
frontend/routes/: Cargo.toml
frontend/routes/src/: auth.rs  bucket.rs  forum.rs  lib.rs  routing.rs
frontend/util/: Cargo.toml
frontend/util/src/: button.rs  empty.rs  input.rs  lib.rs  link.rs  loadable.rs  loading.rs  uploadable.rs  wrappers.rs
frontend/util/src/markdown/: author_markdown_side_by_side.rs  author_markdown_toggle.rs  mod.rs
frontend7/: Cargo.toml
frontend7/src/: main.rs
frontend7/src/components/: button.rs  forum_component.rs  header_component.rs  link.rs  mod.rs
frontend7/src/components/auth/: create_account_component.rs  login_component.rs  mod.rs
frontend7/src/components/bucket/: bucket.rs  buckets.rs  mod.rs  new_bucket.rs
frontend7/src/components/forum/: forum.rs  forum_list.rs  forum_list_element.rs  list_elements.rs  mod.rs  new_thread.rs  post_tree.rs
frontend7/src/components/forum/thread/: mod.rs  new_thread.rs  (+2 more)
frontend7/src/components/markdown/: author_markdown_side_by_side.rs  author_markdown_toggle.rs  mod.rs
frontend7/src/context/: mod.rs  networking.rs  route_service.rs  storage.rs  user.rs
frontend7/src/datatypes/: answer.rs  bucket.rs  forum.rs  mod.rs  post.rs  question.rs  thread.rs  user.rs
frontend7/src/util/: empty.rs  input.rs  loadable.rs  loading.rs  mod.rs  uploadable.rs
frontend7/static/: styles.css
identifiers/: Cargo.toml
identifiers/src/: answer.rs  article.rs  bucket.rs  chat.rs  forum.rs  lib.rs  message.rs  post.rs  question.rs  thread.rs  user.rs
wire/: Cargo.toml
wire/src/: answer.rs  article.rs  bucket.rs  chat.rs  forum.rs  lib.rs  login.rs  message.rs  post.rs  question.rs  thread.rs  user.rs
www/: Cargo.toml
www/src/: main.rs  main_bac.rs  msg.rs
www/src/controller/: bucket_questions.rs  mod.rs  news.rs
www/src/models/: article.rs  mod.rs  news.rs
www/src/models/bucket/: mod.rs  question.rs
www/src/models/news/: article.rs  mod.rs
www/src/views/: article.rs  bucket_questions.rs  content.rs  loadable.rs  mod.rs  navbar.rs  news.rs
www/src/views/bucket_questions/: active_question.rs  mod.rs  question_input.rs
www/static/: index.html  styles.css
(+309 files in other folders)
