[package]
name = "weekend_at_joes_4_backend"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
requests_and_responses = { path = "requests_and_responses"}
db_proc_macros = { path = "db_proc_macros"}

rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
#rocket-simpleauth = "0.3.0"

diesel = { version = "1.0", features = ["postgres", "uuid", "chrono", "serde_json"] }
#diesel_codegen = { version = "1.0", features = ["postgresql"] }
diesel_infer_schema = {version = "1.1.0", features = ["postgres"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
r2d2-diesel = "1.0.0"
r2d2 = "*"

lazy_static = "1.0"

serde = "1.0.14"
serde_json = "1.0.3"
serde_derive = "1.0.14"

uuid = {version = "0.5", features = ["serde", "v4"] }
#bcrypt = "0.1"

log = "0.3.8"
simplelog = "^0.4.2"

rand = "0.4.1"
frank_jwt = "3.0.0"

rust-crypto = "0.2.36"

slug = "0.1.2"

rocket_cors = "0.2.3"
