[package]
name = "frontend7"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "6e7a5611c9a6d8ae4e2f2437d1c41a5bb28919af" }
yew = { git = "https://github.com/DenisKolodin/yew", rev = "e80d8d564f4b5c8239408f32ec2301e8c629fefa" }
requests_and_responses = {path = "../requests_and_responses"}
failure = "0.1"
failure_derive = "0.1.1"

serde = "1"
serde_derive = "1"
serde_json = "*"

stdweb = "0.4.2"

base64 = "0.9.0"

chrono = { version = "0.4", features = ["serde"] }

# For parsing rendering markdown
pulldown-cmark = { git = "https://github.com/google/pulldown-cmark", rev = "c1ac9123f1653dc774403634696f848ffecbb01c" }

