[package]
name = "frontend7"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "e80d8d564f4b5c8239408f32ec2301e8c629fefa" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "93d759fa171acc301a1c736da7cac4dbdb97b7b3" }
yew = { git = "https://github.com/hgzimmerman/yew", rev = "afbdbf2b291ae17beed5a4d7ca77bd86b56f4850" }
requests_and_responses = {path = "../requests_and_responses"}
failure = "0.1"
failure_derive = "0.1.1"

serde = "1"
serde_derive = "1"
serde_json = "*"

stdweb = "0.4.2"

base64 = "0.9.0"

chrono = { version = "0.4", features = ["serde"] }

# For parsing rendering markdown
pulldown-cmark = { git = "https://github.com/google/pulldown-cmark", rev = "c1ac9123f1653dc774403634696f848ffecbb01c" }

