[package]
name = "identifiers"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
serde = "1.0.56"
serde_json = "1.0.3"
serde_derive = "1.0.14"

rocket = "0.3.11"

[dependencies.uuid]
version = "0.6.5"
default-features = false
features = ["serde"]

[features]
default = []
rocket_support = []


