[package]
name = "identifiers"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.56"
serde_json = "1.0.3"
serde_derive = "1.0.14"

[dependencies.rocket]
version = "0.3.11"
optional = true

[dependencies.uuid]
version = "0.6.5"
default-features = false
features = ["serde"]

[features]
default = []
rocket_support = ["rocket"]


