[package]
name = "wire"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.56"
serde_json = "1.0.3"
serde_derive = "1.0.14"

identifiers = { path = "../identifiers"}

[dependencies.uuid]
version = "0.6.5"
default-features = false
features = ["serde"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]


