[package]
name = "weekend_at_joes_4_frontend"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", rev = "c1119f098c3de634d2893ece66fd57aefb6e5e72" }
strum = "0.8.0"
strum_macros = "0.8.0"

serde = "1.0.14"
serde_json = "1.0.3"
serde_derive = "1.0.14"
