[package]
name = "auth"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]


[features]
default = ["rocket_support"]
rocket_support = ["rocket", "rocket_contrib", "identifiers/rocket_support"]

[dependencies]
identifiers = { path = "../../identifiers"}
wire = { path = "../../wire"}
error = {path = "../error"}

rust-crypto = "0.2.36"
frank_jwt = "3.0.0"
serde_json = "1.0.3"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.4.1"
log = "0.3.8"
simplelog = "^0.5.0"

rocket = {version = "0.3.17", optional = true}
rocket_contrib = {version = "0.3.17", optional = true }


