[package]
name = "db"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
autotests = false

[[bench]]
name = "bench"
path = "tests/bench.rs"

[[test]]
name = "integration_tests"
path = "tests/integration.rs"


[dependencies]

wire = { path = "../../wire"}  # TODO Remove this ???
identifiers = { path = "../../identifiers" ,features=["rocket_support"]}
db_proc_macros = { path = "../db_proc_macros"}
error = { path = "../error" }
auth = { path = "../auth"}

chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "0.6", features = ["serde", "v4"] }
r2d2-diesel = "1.0.0"
r2d2 = "*"

#rust-crypto = "0.2.36"
#frank_jwt = "3.0.0"

serde = "1.0.14"
#serde_json = "1.0.3"

slug = "0.1.2"
rand = "0.4.1"
rocket = "0.3.11"


log = "0.3.8"
simplelog = "^0.5.0"

[dependencies.diesel]
version = ">=1.2.2, <1.3.0"
features = ["postgres", "uuid", "chrono", "serde_json"]


[dev-dependencies]
migrations_internals = "~1.2.0"
lazy_static = "1.0"
testing_common = {path = "../testing_common"}
