[package]
name = "db"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
autotests = false
edition = "2018"

[[bench]]
name = "bench"
path = "tests/bench.rs"

[[test]]
name = "integration_tests"
path = "tests/integration.rs"

[dependencies]

wire = { path = "../../wire"}
identifiers = { path = "../../identifiers" }
error = { path = "../error" }
auth = { path = "../auth"}

chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "0.6", features = ["serde", "v4"] }
r2d2-diesel = "1.0.0"
r2d2 = "*"
pool = {path = "../pool"}

typename = "0.1.0"
typename_derive = "0.1.1"

serde = "1.0.14"

slug = "0.1.2"
rand = "0.4.1"


log = "0.3.8"
simplelog = "^0.5.0"

diesel = {version = "1.3.3", features = ["postgres", "uuid", "chrono", "serde_json"]}


[dev-dependencies]
#migrations_internals = "~1.2.0"
#lazy_static = "1.0"
testing_common = {path = "../testing_common"}
testing_fixtures = {path = "../testing_fixtures"}
