[package]
name = "error"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
rocket = {version = "0.3.13", optional = true }
warp = {version = "0.1.9", optional = true }

[dependencies.diesel]
version = "1.3.2"

[features]
default = []
rocket_support = []
warp_support = []
