[package]
name = "pool"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[features]
default = []
rocket_support = ["rocket"]

[dependencies]
r2d2 = "*"
rocket = {version = "0.4.7", optional = true }


diesel = {version = "1.3.3", features = ["postgres", "r2d2"]}
