[package]
name = "server"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]

wire = { path = "../../wire"}
identifiers = { path = "../../identifiers" ,features=["rocket_support"]}

db = {path = "../db"}
auth = {path = "../auth"}
error = {path = "../error"}
pool = {path = "../pool"}

rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"

chrono = { version = "0.4", features = ["serde"] }


lazy_static = "1.0"

serde = "1.0.14"
serde_json = "1.0.3"

uuid = {version = "0.6", features = ["serde", "v4"] }

log = "0.3.8"
simplelog = "^0.5.0"

rocket_cors = "0.2.3"

clap = "~2.31"

[features]
default = ["development"]

development = []
staging = ["production"]
production = ["rocket/tls"]



[dev-dependencies]
testing_common = {path = "../testing_common"}
testing_fixtures = {path = "../testing_fixtures"}
