[package]
name = "testing_common"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]

wire = { path = "../../wire"}  # TODO Remove this ???
identifiers = { path = "../../identifiers" ,features=["rocket_support"]}
db = {path = "../db"}
error = { path = "../error" }
auth = { path = "../auth"}


chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "0.6", features = ["serde", "v4"] }


migrations_internals = "~1.2.0"
lazy_static = "1.0"

[dependencies.diesel]
version = ">=1.2.2, <1.3.0"
features = ["postgres", "uuid", "chrono", "serde_json"]



