[package]
name = "testing_common"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]

auth = { path = "../auth"}
testing_fixtures = {path = "../testing_fixtures"}

server = { path = "../server"}
pool = {path = "../pool"}
rocket = "0.3.13"


chrono = { version = "0.4", features = ["serde"] }
uuid = {version = "0.6", features = ["serde", "v4"] }


migrations_internals = "~1.3.0"
lazy_static = "1.0"


[dependencies.diesel]
version = "1.3.2"
features = ["postgres", "uuid", "chrono", "serde_json"]



