[package]
name = "warp_server"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
edition = "2018"

[dependencies]

warp = "0.1.6"
db = {path = "../db"}
wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
uuid = {version = "0.6", features = ["serde", "v4"] }
log = "0.4"
simplelog = "^0.5.0"
auth = {path = "../auth"}
error = {path = "../error"}
pool = {path = "../pool"}


serde = "1.0.14"
serde_json = "1.0.32"


# This is for db connection stuff, it may be migrated elsewhere later
lazy_static = "1.1.0"
r2d2-diesel = "1.0.0"
r2d2 = "*"

pretty_env_logger = "0.2"


[dependencies.diesel]
version = "1.3.2"
features = ["postgres", "uuid", "chrono", "serde_json"]


[dev-dependencies]
testing_fixtures = {path = "../testing_fixtures"}
testing_common = {path = "../testing_common"}
bytes = "*"
