[package]
name = "app"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]



[dependencies]
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "e80d8d564f4b5c8239408f32ec2301e8c629fefa" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "afbdbf2b291ae17beed5a4d7ca77bd86b56f4850" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "6f34e84ae4f91044cb44752bce7d0085b2bbe64a" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "04fd5b52ffb49834d9bc3fb16c92b264780f049b" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "cd4d873ddba0b3bcd45dd3243f86f836960cafe3" }

#http = "0.1"


#wire = {path = "../../wire"}
#context = {path = "../context"}
#util = {path = "../util"}
common = {path = "../common"}
#routes = {path = "../routes"}

bucket = {path = "../bucket"}
forum = {path = "../forum"}
auth = {path = "../auth"}
header = {path = "../header"}

log = "0.4"
web_logger = "0.1"
#failure = "0.1"
#stdweb = "0.4.2"


#[dependencies.chrono]
#version = "0.4"
#default-features = false


[features]
default = ["development"]
#development = ["bucket/development", "forum/development", "auth/development"]
development = ["auth/development", "bucket/development"]
