[package]
name = "app"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]




[dependencies]
yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "04fd5b52ffb49834d9bc3fb16c92b264780f049b" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "08063508edd572273b3d4d62865c4260cea6c0cc" }

#http = "0.1"


#wire = {path = "../../wire"}
#context = {path = "../context"}
#util = {path = "../util"}
common = {path = "../common"}
#routes = {path = "../routes"}

bucket = {path = "../bucket"}
forum = {path = "../forum"}
auth = {path = "../auth"}
header = {path = "../header"}

log = "0.4"
web_logger = "0.1"
#failure = "0.1"
#stdweb = "0.4.2"


#[dependencies.chrono]
#version = "0.4"
#default-features = false


[features]
default = ["development"]
#development = ["bucket/development", "forum/development", "auth/development"]
development = ["auth/development", "bucket/development"]
