[package]
name = "auth"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
#context = {path = "../context"}

common = {path = "../common"}
wire = {path = "../../wire"}
util = {path = "../util"}
#routes = {path = "../routes"}

#yew = { git = "https://github.com/hgzimmerman/yew", rev = "ad750e481746b1eaa8853b1575580a856c277bf2" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "6f34e84ae4f91044cb44752bce7d0085b2bbe64a" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "04fd5b52ffb49834d9bc3fb16c92b264780f049b" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "cd4d873ddba0b3bcd45dd3243f86f836960cafe3" }

failure = "0.1"
serde = "1"
serde_derive = "1"


[features]
default = []

development = ["common/development"]
