[package]
name = "bucket"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
#context = {path = "../context"}

common = {path = "../common"}
wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
util = {path = "../util"}
#routes = {path = "../routes"}

#yew = { git = "https://github.com/hgzimmerman/yew", rev = "ad750e481746b1eaa8853b1575580a856c277bf2" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "6f34e84ae4f91044cb44752bce7d0085b2bbe64a" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "04fd5b52ffb49834d9bc3fb16c92b264780f049b" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "cd4d873ddba0b3bcd45dd3243f86f836960cafe3" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "2ed328d3ea6e35690d7e5ca1e81d8cb4b98fbe2a" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "08063508edd572273b3d4d62865c4260cea6c0cc" }

stdweb = "0.4.2"

failure = "0.1"

log = "0.4"

serde = "1"
serde_derive = "1"


[features]
default = []

development = ["common/development"]
