[package]
name = "common"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
failure = "0.1"
failure_derive = "0.1.1"
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "6585c91ce506caea7cf7b7160d777ac78b86ae0d"}
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "6f34e84ae4f91044cb44752bce7d0085b2bbe64a" }

yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }

stdweb = "0.4.2"
base64 = "0.9.0"

serde_json = "*"
serde = "1"
serde_derive = "1"

[dependencies.chrono]
version = "0.4"
default-features = false


[features]
default = []
development = []
