[package]
name = "common"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
failure = "0.1"
failure_derive = "0.1.1"
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "6585c91ce506caea7cf7b7160d777ac78b86ae0d"}
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "cd4d873ddba0b3bcd45dd3243f86f836960cafe3" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "08063508edd572273b3d4d62865c4260cea6c0cc" }

yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }

stdweb = "0.4.2"
base64 = "0.9.0"

serde_json = "*"
serde = "1"
serde_derive = "1"


log = "0.4"

[dependencies.chrono]
version = "0.4"
default-features = false


[features]
default = []
development = []
