[package]
name = "context"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
failure = "0.1"
failure_derive = "0.1.1"

#yew = { git = "https://github.com/hgzimmerman/yew", rev = "ad750e481746b1eaa8853b1575580a856c277bf2" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}

base64 = "0.9.0"

serde_json = "*"
serde = "1"

stdweb = "0.4.2"
url = "1.7.0"


[dependencies.chrono]
version = "0.4"
default-features = false


[features]
default = []
development = []
