[package]
name = "forum"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
common = {path = "../common" }


wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
util = {path = "../util"}
#routes = {path = "../routes"}

#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "6f34e84ae4f91044cb44752bce7d0085b2bbe64a" }


serde = "1"
serde_derive = "1"

log = "0.4"

failure = "0.1"

[features]
default = []

development = ["common/development"]
