[package]
name = "forum"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]
common = {path = "../common" }


wire = {path = "../../wire"}
identifiers = {path = "../../identifiers"}
util = {path = "../util"}
#routes = {path = "../routes"}

#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "49319b8c02a8eeb15ed4c8a8761f83adcee856b0" }
#yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "cd4d873ddba0b3bcd45dd3243f86f836960cafe3" }
yew_router = { git = "https://github.com/hgzimmerman/YewRouter", rev = "08063508edd572273b3d4d62865c4260cea6c0cc" }

serde = "1"
serde_derive = "1"

log = "0.4"

failure = "0.1"

[features]
default = []

development = ["common/development"]
