[package]
name = "util"
version = "0.1.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]

[dependencies]

#context = {path = "../context"}
common = {path = "../common"}
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "ad750e481746b1eaa8853b1575580a856c277bf2" }
#yew = { git = "https://github.com/hgzimmerman/yew", rev = "3685a0cd1c642b3f4dbdaa06832848a2ae641517" }
#yew = { git = "https://github.com/DenisKolodin/yew", rev = "7f72c716042d2b85922f75e7ede54f4b4d49970d"}
yew = { git = "https://github.com/DenisKolodin/yew", rev = "a5213c57430b2f18539aeb25939bdc8c5c348157" }
stdweb = "0.4.2"

pulldown-cmark = { git = "https://github.com/google/pulldown-cmark", rev = "c1ac9123f1653dc774403634696f848ffecbb01c" }
